# close-devs

./: .gitignore  GUIDE.en.md  GUIDE.zh-CN.md  README.md  compose.yaml  main.py  pyproject.toml
.github/workflows/: close-devs-pr.yml
config/: default.toml  rules.toml
migrations/models/: 0_20260403000000_init.py  1_20260404021500_agentic_runtime.py  2_20260404043000_skill_system.py  3_20260404070000_next_stage_improvements.py
src/agents/: base.py  dynamic_debug.py  maintenance.py  static_review.py
src/core/: agent_kernel.py  config.py  dispatcher.py  logging.py  models.py  orchestrator.py  scheduler.py
src/github/: __init__.py  adapter.py  rendering.py
src/llm/: anthropic_native.py  base.py  factory.py  google_genai.py  langchain_structured.py  mock.py  ollama_local.py  openai_compatible.py  openai_native.py
src/memory/: __init__.py  database.py  issue_catalog.py  orm_models.py  run_history.py  state_store.py
src/repo/: __init__.py  change_detector.py  scanner.py  snapshot.py
src/reports/: enrichment.py  markdown.py  serializer.py
src/skills/: __init__.py  evolution.py  manager.py
src/tools/: __init__.py  agent_toolkit.py  command_runner.py  dependency_audit.py  environment_manager.py  file_store.py  language_support.py  patch_service.py  static_context_builder.py  static_tooling.py  test_runner.py  traceback_parser.py
src/workflows/: __init__.py  base.py  incident_debug.py  maintenance_loop.py  pull_request_maintenance.py
tests/: conftest.py  support.py
tests/integration/: test_aerich_bootstrap.py  test_maintenance_loop.py  (+2 more)
(+31 files in other folders)
